<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ListarPersonas">

    <TableLayout
        android:id="@+id/tblPersonas"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:stretchColumns="*">

        <TableRow
            android:id="@+id/flEnunciados"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/lblNumero"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/numero"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/lblCedula"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtCampo_Cedula_CrearPersona"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/lblNombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtCampo_Nombre_CrearCliente"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/lblApellido"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtCampo_Apellido_CrearPersona"
                android:textSize="18sp"
                android:textStyle="bold" />
        </TableRow>
    </TableLayout>
</LinearLayout>